# jobchain

./: Cargo.toml  PLAN.md  README.md
.finna/: consensus.json  roadmap.arf
.finna/specs/: 01-workspace-skeleton.toml  02-keypair-generation.toml  03-did-web-document.toml  04-credential-structure.toml  05-credential-signing.toml  06-signature-verification.toml  07-did-web-resolution.toml  08-amendment-chain.toml  09-adapter-trait.toml  10-cli-init.toml  11-cli-issue.toml  12-cli-verify.toml  13-cli-amend.toml  14-cli-wallet.toml  15-verify-wasm-target.toml  16-end-to-end-test.toml
.finna/specs/01-workspace-skeleton/: spec.arf
.finna/specs/02-keypair-generation/: spec.arf
.finna/specs/03-did-web-document/: spec.arf
.finna/specs/04-credential-structure/: spec.arf
.finna/specs/05-credential-signing/: spec.arf
.finna/specs/06-signature-verification/: spec.arf
.finna/specs/07-did-web-resolution/: spec.arf
.finna/specs/08-amendment-chain/: spec.arf
.finna/specs/09-adapter-trait/: spec.arf
.finna/specs/10-cli-init/: spec.arf
.finna/specs/11-cli-issue/: spec.arf
.finna/specs/12-cli-verify/: spec.arf
.finna/specs/13-cli-amend/: spec.arf
.finna/specs/14-cli-wallet/: spec.arf
.finna/specs/15-verify-wasm-target/: spec.arf
.finna/specs/16-end-to-end-test/: spec.arf
.github/workflows/: ci.yml
crates/jobchain-cli/: Cargo.toml
crates/jobchain-cli/src/: main.rs
crates/jobchain-cli/src/commands/: amend.rs  init.rs  issue.rs  mod.rs  verify.rs  wallet.rs
crates/jobchain-cli/tests/: amend.rs  end_to_end.rs  init.rs  issue.rs  verify.rs  wallet.rs
crates/jobchain-core/: Cargo.toml
crates/jobchain-core/src/: adapter.rs  amendment.rs  credential.rs  did.rs  lib.rs  signing.rs
crates/jobchain-verify/: Cargo.toml
crates/jobchain-verify/src/: lib.rs  wasm.rs
docs/: index.html
