[workspace]
members = [
    "crates/jobchain-core",
    "crates/jobchain-cli",
    "crates/jobchain-verify",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jake Goldsborough"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
