[workspace]
members = [
    "crates/jobchain-core",
    "crates/jobchain-cli",
    "crates/jobchain-verify",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jake Goldsborough"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zeroize = "1"
bs58 = "0.5"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
assert_cmd = "2"
predicates = "3"
jobl = "20251215"
