[package]
name = "jobchain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for jobchain"

[[bin]]
name = "jobchain"
path = "src/main.rs"

[dependencies]
jobchain-core = { path = "../jobchain-core" }
clap = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3"
