[package]
name = "jobchain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for jobchain"

[[bin]]
name = "jobchain"
path = "src/main.rs"

[dependencies]
jobchain-core = { path = "../jobchain-core", features = ["resolve"] }
jobchain-verify = { path = "../jobchain-verify" }
clap = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jobl = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3"
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
