[package]
name = "jobchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, signing, DIDs, and credential logic for jobchain"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jobl = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
tempfile = "3"
